fixing da bugs of martijn
yeh

--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,6 @@ body {
     width: 32px;
     height: 32px;
     transition: all 1s ease-in-out;
-
 }
 
 #tileMap {}
@@ -141,6 +140,7 @@ body {
 .foreground {
     position: absolute;
     z-index: 1000;
+    transition: all 1s ease-in-out;
 }
 
 .speechBubble{
